--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -113,7 +113,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
       position: relative;
       z-index: 10;
 
-      
+
 
       // CTA
 
@@ -522,7 +522,7 @@ section {
 }
 
 #content {
-  margin-top: 30px;
+
   float: left;
 }
 
@@ -533,10 +533,84 @@ section {
   margin-bottom: 15px;
 }
 
-.single-post main {
+.single-post main, .blog main {
   border-top: 5px solid $yellow-primary;
 }
 
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid $blue-primary;
+}
+
+.blog-sidebar {
+  padding: 50px 30px;
+  background-color: #3a3a3a;
+}
+
+.blog-content {
+  padding: 50px;
+}
+
+.blog-sidebar-title {
+  text-transform: uppercase;
+  font-family: $font-family--heavy;
+  color: $yellow-primary;
+  font-size: 15px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+
+  i {
+    float: right;
+  }
+}
+
+.blog-categories {
+  display: none;
+
+  ul {
+    margin-bottom: 40px;
+    float: left;
+    width: 100%;
+
+    li {
+      padding: 5px;
+      float: left;
+      width: 100%;
+
+      a {
+        color: $yellow-primary;
+        font-size: 15px;
+      }
+
+      &:hover {
+        background: $yellow-primary;
+
+        a {
+          color: #3a3a3a;
+        }
+      }
+    }
+  }
+}
+
+.blog-post {
+  border-top: 5px solid $yellow-primary;
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  h2 {
+    margin-bottom: 15px;
+  }
+}
+
+.blog-post-small {
+  padding-right: 20px;
+}
+
+.blog-post-categories {
+  margin-bottom: 20px;
+  color: $yellow-primary;
+  font-family: $font-family--bold;
 }
