--- a/style.css
+++ b/style.css
@@ -452,25 +452,24 @@ html, body {
 /* line 3, sass/layout/_footer.scss */
 footer {
   position: relative;
-  margin-top: 75px;
   float: left;
   padding: 10px 30px;
   background: #e5e5e5;
   width: 100%;
 }
 
-/* line 12, sass/layout/_footer.scss */
+/* line 11, sass/layout/_footer.scss */
 .footer-logo {
   padding-top: 15px;
 }
 
-/* line 16, sass/layout/_footer.scss */
+/* line 15, sass/layout/_footer.scss */
 .footer-social {
   clear: both;
   display: block;
   float: right;
 }
-/* line 21, sass/layout/_footer.scss */
+/* line 20, sass/layout/_footer.scss */
 .footer-social ul {
   display: block;
   list-style: none;
@@ -478,7 +477,7 @@ footer {
   padding-left: 0;
   padding-top: 25px;
 }
-/* line 28, sass/layout/_footer.scss */
+/* line 27, sass/layout/_footer.scss */
 .footer-social ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
@@ -487,47 +486,47 @@ footer {
   left: -999em;
   z-index: 99999;
 }
-/* line 36, sass/layout/_footer.scss */
+/* line 35, sass/layout/_footer.scss */
 .footer-social ul ul ul {
   left: -999em;
   top: 0;
 }
-/* line 42, sass/layout/_footer.scss */
+/* line 41, sass/layout/_footer.scss */
 .footer-social ul ul li:hover > ul, .footer-social ul ul li.focus > ul {
   left: 100%;
 }
-/* line 48, sass/layout/_footer.scss */
+/* line 47, sass/layout/_footer.scss */
 .footer-social ul ul a {
   width: 200px;
 }
-/* line 61, sass/layout/_footer.scss */
+/* line 60, sass/layout/_footer.scss */
 .footer-social ul li:hover > ul,
 .footer-social ul li.focus > ul {
   left: auto;
 }
-/* line 66, sass/layout/_footer.scss */
+/* line 65, sass/layout/_footer.scss */
 .footer-social li {
   float: left;
   position: relative;
   margin: 0 5px 5px 25px;
 }
-/* line 76, sass/layout/_footer.scss */
+/* line 75, sass/layout/_footer.scss */
 .footer-social li:nth-child(1):hover {
   border-bottom: 3px solid #4099FF;
 }
-/* line 81, sass/layout/_footer.scss */
+/* line 80, sass/layout/_footer.scss */
 .footer-social li:nth-child(2):hover {
   border-bottom: 3px solid #3b5998;
 }
-/* line 86, sass/layout/_footer.scss */
+/* line 85, sass/layout/_footer.scss */
 .footer-social li:nth-child(3):hover {
   border-bottom: 3px solid #675144;
 }
-/* line 91, sass/layout/_footer.scss */
+/* line 90, sass/layout/_footer.scss */
 .footer-social li:nth-child(4):hover {
   border-bottom: 3px solid #c4302b;
 }
-/* line 97, sass/layout/_footer.scss */
+/* line 96, sass/layout/_footer.scss */
 .footer-social a {
   display: block;
   text-decoration: none;
@@ -539,7 +538,7 @@ footer {
   text-transform: uppercase;
 }
 
-/* line 114, sass/layout/_footer.scss */
+/* line 113, sass/layout/_footer.scss */
 .footer-bottom {
   float: left;
   width: 100%;
@@ -548,12 +547,12 @@ footer {
   background: #4d4d4d;
   color: #a2a2a2;
 }
-/* line 122, sass/layout/_footer.scss */
+/* line 121, sass/layout/_footer.scss */
 .footer-bottom span {
   font-size: 10px;
 }
 
-/* line 127, sass/layout/_footer.scss */
+/* line 126, sass/layout/_footer.scss */
 .shield {
   position: absolute;
   left: 50%;
@@ -3125,7 +3124,6 @@ section {
 
 /* line 524, sass/layout/_main.scss */
 #content {
-  margin-top: 30px;
   float: left;
 }
 
@@ -3138,13 +3136,94 @@ section {
 }
 
 /* line 536, sass/layout/_main.scss */
-.single-post main {
+.single-post main, .blog main {
   border-top: 5px solid #fec935;
 }
 
 /* line 540, sass/layout/_main.scss */
 .page-template-product main, .page-template-panel main {
   border-top: 5px solid #2791bd;
+}
+
+/* line 544, sass/layout/_main.scss */
+.blog-sidebar {
+  padding: 50px 30px;
+  background-color: #3a3a3a;
+}
+
+/* line 549, sass/layout/_main.scss */
+.blog-content {
+  padding: 50px;
+}
+
+/* line 553, sass/layout/_main.scss */
+.blog-sidebar-title {
+  text-transform: uppercase;
+  font-family: "Avenir Next Cyr W00 Heavy";
+  color: #fec935;
+  font-size: 15px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  cursor: pointer;
+}
+/* line 564, sass/layout/_main.scss */
+.blog-sidebar-title i {
+  float: right;
+}
+
+/* line 569, sass/layout/_main.scss */
+.blog-categories {
+  display: none;
+}
+/* line 572, sass/layout/_main.scss */
+.blog-categories ul {
+  margin-bottom: 40px;
+  float: left;
+  width: 100%;
+}
+/* line 577, sass/layout/_main.scss */
+.blog-categories ul li {
+  padding: 5px;
+  float: left;
+  width: 100%;
+}
+/* line 582, sass/layout/_main.scss */
+.blog-categories ul li a {
+  color: #fec935;
+  font-size: 15px;
+}
+/* line 587, sass/layout/_main.scss */
+.blog-categories ul li:hover {
+  background: #fec935;
+}
+/* line 590, sass/layout/_main.scss */
+.blog-categories ul li:hover a {
+  color: #3a3a3a;
+}
+
+/* line 598, sass/layout/_main.scss */
+.blog-post {
+  border-top: 5px solid #fec935;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+/* line 603, sass/layout/_main.scss */
+.blog-post h2 {
+  margin-bottom: 15px;
+}
+
+/* line 608, sass/layout/_main.scss */
+.blog-post-small {
+  padding-right: 20px;
+}
+
+/* line 612, sass/layout/_main.scss */
+.blog-post-categories {
+  margin-bottom: 20px;
+  color: #fec935;
+  font-family: "Avenir Next Cyr W00 Bold";
 }
 
 /* line 1, sass/layout/_header.scss */
