--- a/sass/modules/_modules.scss
+++ b/sass/modules/_modules.scss
@@ -64,6 +64,18 @@
 	border-top: 4px solid $grey;
 	margin-bottom: 0px;
 
+	fieldset {
+	  border: none;
+	  margin: 0;
+	  padding: 0;
+	  display: none;
+	}
+
+	fieldset[name=impact]{
+	    	display: block;
+	}
+ 
+
 	&:after{ //FOR TRIANGLE
 		bottom: 100%;
 		left: 16.566667%;
@@ -115,6 +127,8 @@
 		-webkit-column-count: 4; /* Chrome, Safari, Opera */
 	    -moz-column-count: 4; /* Firefox */
 	    column-count: 4;
+
+	  
 
 	}
 
@@ -175,7 +189,7 @@
 }
 
 .network-search{
-	
+	display: none;
 	border-top: 4px solid $grey;
 
 
@@ -238,15 +252,62 @@
 	line-height: 0
 }
 
+.fail-message{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  opacity: 0;
+  pointer-events: none;
+  
+  -webkit-transition: 150ms;
+  -moz-transition: 150ms;
+  transition: 150ms;
+}
+
+.network-grid
+{
+	.fail-message:before{
+	  content: '';
+	  display: inline-block;
+	  vertical-align: middle;
+	  height: 100%;
+	}
+
+	 .fail-message span{
+	  display: inline-block;
+	  vertical-align: middle;
+	  font-size: 20px;
+	  font-weight: 700;
+	}
+
+	&.fail .fail-message{
+	  opacity: 1;
+	  pointer-events: auto;
+	}
+
+	.mix{
+		display: none;
+	}
+}
+
 .network-grid-item{
  	line-height: 0;
  	width: 100%;
- 	background-size: contain;
+ 	background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 0;
  	text-align: center;
  	padding-top: 100%;
+ 	-moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    -o-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    -webkit-filter: grayscale(100%);
+    filter: gray;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+
 
 
 
@@ -258,6 +319,8 @@
     &:hover{
     	background-color: $yellow-primary;
  		background-blend-mode: multiply;
+ 		filter: none;
+ 		-webkit-filter: grayscale(0);
  	}
 
 
