--- a/style.css
+++ b/style.css
@@ -3514,6 +3514,17 @@ header {
   margin-bottom: 0px;
 }
 /* line 67, sass/modules/_modules.scss */
+.network-filter-topics fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
+  display: none;
+}
+/* line 74, sass/modules/_modules.scss */
+.network-filter-topics fieldset[name=impact] {
+  display: block;
+}
+/* line 79, sass/modules/_modules.scss */
 .network-filter-topics:after {
   bottom: 100%;
   left: 16.566667%;
@@ -3529,18 +3540,18 @@ header {
   margin-left: -30px;
   top: 0px;
 }
-/* line 83, sass/modules/_modules.scss */
+/* line 95, sass/modules/_modules.scss */
 .network-filter-topics .topic-list {
   padding: 20px 20px 30px 20px;
   border-right: 4px solid #616161;
 }
-/* line 87, sass/modules/_modules.scss */
+/* line 99, sass/modules/_modules.scss */
 .network-filter-topics .topic-list span.filter-by {
   font-size: 0.6875em;
   letter-spacing: 0.0625em;
   text-transform: uppercase;
 }
-/* line 93, sass/modules/_modules.scss */
+/* line 105, sass/modules/_modules.scss */
 .network-filter-topics .topic-list li {
   display: block;
   font-size: 0.9375em;
@@ -3550,14 +3561,14 @@ header {
   padding: 8px 0px 0px 0px;
   letter-spacing: 0.0625em;
 }
-/* line 102, sass/modules/_modules.scss */
+/* line 114, sass/modules/_modules.scss */
 .network-filter-topics .topic-list li:hover {
   color: #616161;
   text-decoration: underline;
   font-weight: bold;
   cursor: pointer;
 }
-/* line 112, sass/modules/_modules.scss */
+/* line 124, sass/modules/_modules.scss */
 .network-filter-topics .topic-items {
   padding: 45px 20px 10px 20px;
   -webkit-column-count: 4;
@@ -3566,13 +3577,13 @@ header {
   /* Firefox */
   column-count: 4;
 }
-/* line 121, sass/modules/_modules.scss */
+/* line 135, sass/modules/_modules.scss */
 .network-filter-topics input[type=checkbox] {
   visibility: hidden;
   display: inline;
   float: left;
 }
-/* line 126, sass/modules/_modules.scss */
+/* line 140, sass/modules/_modules.scss */
 .network-filter-topics .topic-checkbox {
   width: 15px;
   height: 15px;
@@ -3583,7 +3594,7 @@ header {
   display: block;
   clear: both;
 }
-/* line 137, sass/modules/_modules.scss */
+/* line 151, sass/modules/_modules.scss */
 .network-filter-topics .topic-checkbox label {
   font-size: 0.9375em;
   line-height: 1.4;
@@ -3594,7 +3605,7 @@ header {
   top: -3px;
   position: relative;
 }
-/* line 150, sass/modules/_modules.scss */
+/* line 164, sass/modules/_modules.scss */
 .network-filter-topics .topic-checkbox label:after {
   opacity: 0;
   content: '';
@@ -3605,22 +3616,23 @@ header {
   top: 3px;
   left: -6px;
 }
-/* line 163, sass/modules/_modules.scss */
+/* line 177, sass/modules/_modules.scss */
 .network-filter-topics .topic-checkbox label:hover::after {
   filter: alpha(opacity=70);
   opacity: 0.7;
 }
-/* line 169, sass/modules/_modules.scss */
+/* line 183, sass/modules/_modules.scss */
 .network-filter-topics .topic-checkbox input[type=checkbox]:checked + label:after {
   filter: alpha(opacity=100);
   opacity: 1;
 }
 
-/* line 177, sass/modules/_modules.scss */
+/* line 191, sass/modules/_modules.scss */
 .network-search {
+  display: none;
   border-top: 4px solid #616161;
 }
-/* line 182, sass/modules/_modules.scss */
+/* line 196, sass/modules/_modules.scss */
 .network-search:after {
   bottom: 100%;
   left: 50%;
@@ -3636,7 +3648,7 @@ header {
   margin-left: -30px;
   top: 0px;
 }
-/* line 201, sass/modules/_modules.scss */
+/* line 215, sass/modules/_modules.scss */
 .network-search .tempsearch {
   height: 4px;
   width: 90%;
@@ -3644,17 +3656,17 @@ header {
   margin-top: 140px;
 }
 
-/* line 209, sass/modules/_modules.scss */
+/* line 223, sass/modules/_modules.scss */
 .filter-title {
   padding: 40px;
 }
 
-/* line 213, sass/modules/_modules.scss */
+/* line 227, sass/modules/_modules.scss */
 .network-map {
   display: none;
   border-top: 4px solid #616161;
 }
-/* line 216, sass/modules/_modules.scss */
+/* line 230, sass/modules/_modules.scss */
 .network-map:after {
   bottom: 100%;
   left: 83.33333%;
@@ -3671,34 +3683,80 @@ header {
   top: 0px;
 }
 
-/* line 237, sass/modules/_modules.scss */
+/* line 251, sass/modules/_modules.scss */
 .network-grid .columns {
   line-height: 0;
 }
 
-/* line 241, sass/modules/_modules.scss */
+/* line 255, sass/modules/_modules.scss */
+.fail-message {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: 150ms;
+  -moz-transition: 150ms;
+  transition: 150ms;
+}
+
+/* line 272, sass/modules/_modules.scss */
+.network-grid .fail-message:before {
+  content: '';
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+/* line 279, sass/modules/_modules.scss */
+.network-grid .fail-message span {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 20px;
+  font-weight: 700;
+}
+/* line 286, sass/modules/_modules.scss */
+.network-grid.fail .fail-message {
+  opacity: 1;
+  pointer-events: auto;
+}
+/* line 291, sass/modules/_modules.scss */
+.network-grid .mix {
+  display: none;
+}
+
+/* line 296, sass/modules/_modules.scss */
 .network-grid-item {
   line-height: 0;
   width: 100%;
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
   height: 0;
   text-align: center;
   padding-top: 100%;
+  -moz-filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  -o-filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  -webkit-filter: grayscale(100%);
+  filter: gray;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
 }
-/* line 253, sass/modules/_modules.scss */
+/* line 314, sass/modules/_modules.scss */
 .network-grid-item img {
   height: auto;
   margin: 0;
   border: 0px;
 }
-/* line 258, sass/modules/_modules.scss */
+/* line 319, sass/modules/_modules.scss */
 .network-grid-item:hover {
   background-color: #fec935;
   background-blend-mode: multiply;
+  filter: none;
+  -webkit-filter: grayscale(0);
 }
-/* line 264, sass/modules/_modules.scss */
+/* line 327, sass/modules/_modules.scss */
 .network-grid-item .hover-info {
   display: none;
   position: absolute;
@@ -3717,36 +3775,36 @@ header {
   -webkit-transform: translate(-50%, -50%);
   /* Safari and Chrome */
 }
-/* line 280, sass/modules/_modules.scss */
+/* line 343, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.name {
   display: block;
   line-height: 1.5;
   font-family: "Avenir Next Cyr W00 Bold";
   font-size: 1.25em;
 }
-/* line 287, sass/modules/_modules.scss */
+/* line 350, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.title {
   display: block;
   font-family: "Avenir Next Cyr W00 Italic";
   font-size: 0.9375em;
   line-height: 1.5;
 }
-/* line 294, sass/modules/_modules.scss */
+/* line 357, sass/modules/_modules.scss */
 .network-grid-item .hover-info span.location {
   display: block;
   font-size: 0.75em;
   line-height: 1.5;
 }
-/* line 300, sass/modules/_modules.scss */
+/* line 363, sass/modules/_modules.scss */
 .network-grid-item:hover .hover-info {
   display: block;
 }
 
-/* line 313, sass/modules/_modules.scss */
+/* line 376, sass/modules/_modules.scss */
 .load-more {
   margin-top: 20px;
 }
-/* line 315, sass/modules/_modules.scss */
+/* line 378, sass/modules/_modules.scss */
 .load-more .load-more-btn {
   background-color: #fec935;
   font-family: "Avenir Next Cyr W00 Heavy";
@@ -3756,24 +3814,24 @@ header {
   text-align: center;
   padding: 10px 0px 10px 0px;
 }
-/* line 324, sass/modules/_modules.scss */
+/* line 387, sass/modules/_modules.scss */
 .load-more .load-more-btn:hover {
   opacity: 0.7;
   cursor: pointer;
 }
 
-/* line 335, sass/modules/_modules.scss */
+/* line 398, sass/modules/_modules.scss */
 .search {
   display: block;
   margin: 50px;
 }
-/* line 339, sass/modules/_modules.scss */
+/* line 402, sass/modules/_modules.scss */
 .search .input {
   max-width: 100%;
   width: 100%;
 }
 
-/* line 347, sass/modules/_modules.scss */
+/* line 410, sass/modules/_modules.scss */
 #map-container {
   padding: 6px;
   border-width: 1px;
@@ -3785,13 +3843,13 @@ header {
   width: 100%;
 }
 
-/* line 357, sass/modules/_modules.scss */
+/* line 420, sass/modules/_modules.scss */
 #map {
   width: 100%;
   height: 400px;
 }
 
-/* line 362, sass/modules/_modules.scss */
+/* line 425, sass/modules/_modules.scss */
 .map-embed {
   padding: 50px;
 }
