--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -3,7 +3,6 @@ main {
   width: 100%;
 }
 
-
 // Section styles
 
 $color_names: "yellow-primary", "yellow-secondary", "yellow-tertiary", "purple-primary", "purple-secondary", "purple-tertiary", "blue-primary", "blue-secondary", "blue-tertiary", "green-primary", "green-secondary", "green-tertiary", "red-primary", "red-secondary", "red-tertiary";
@@ -402,8 +401,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
 
   .banner-text {
     text-align: center;
-    position: absolute;
-    bottom: 30px;
+    margin-top: 260px;
   }
 }
 
@@ -1068,15 +1066,3 @@ section {
 .page-numbers{display: none;}
 a.next.page-numbers{display: block; color:white;}
 a.next.page-numbers:hover {display: block; color:$yellow-primary;}
-
-.scale {
-  -moz-transform: scale(1.5);
-  -webkit-transform:scale(1.5);
-  -o-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
-}
-
-.mejs-controls {
-  display: none !important;
-}
