--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -331,6 +331,10 @@
 		border-bottom: 3px solid #616161;
 	}
 
+	@include mq('860px', 'max-width') {
+		 display: none;
+	}
+
 }
 
 .utilities-nav {
