--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -959,6 +959,13 @@ section {
 
 .news {
   margin-bottom: 0px;
+
+  h3 {
+    @include mq($desktop-width, 'max-width') {
+  		font-size: 25px;
+      line-height: 35px;
+  	}
+  }
 }
 
 .image-holder {
