--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -366,7 +366,7 @@
 		float: right;
 		margin: 0 30px;
 
-		@include mq($tablet-width, 'max-width') {
+		@include mq($mobile-landscape-width, 'max-width') {
 			 float: none;
 			 margin: 0 auto;
 			 text-align: center;
