--- a/sass/modules/_menus.scss
+++ b/sass/modules/_menus.scss
@@ -119,7 +119,7 @@
 	display: block;
 	float: right;
 
-	@include mq($tablet-landscape-width, 'max-width') {
+	@include mq($mobile-landscape-width, 'max-width') {
 		 float: left;
 		 display: none;
 	}
@@ -174,10 +174,10 @@
 		position: relative;
 		margin: 0 5px 5px 25px;
 
-		@include mq($tablet-width, 'max-width') {
+		@include mq($tablet-landscape-width, 'max-width') {
 			 margin: 0 5px 5px 5px;
 			 float: left;
-			 width: 100%;
+
 		}
 
 		&:hover > a,
@@ -187,6 +187,10 @@
 		a {
 			float: left;
 			border-bottom: 3px solid white;
+
+			@include mq($tablet-landscape-width, 'max-width') {
+				 font-size: 12px;
+			}
 		}
 
 		&:nth-child(1) a {
@@ -236,7 +240,7 @@
 	font-size: 10px;
 	cursor: pointer;
 
-	@include mq($tablet-width, 'max-width') {
+	@include mq($mobile-landscape-width, 'max-width') {
 		display: block;
 		text-align: center;
 		width: 100%;
