--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -668,6 +668,7 @@ section {
   margin-right: 20px;
   position: relative;
   float: left;
+  margin-bottom: 10px;
 
   .right {
     display: inline-block;
