--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -722,6 +722,7 @@ section {
   position: relative;
   float: left;
   margin-top: 30px;
+  max-width: 350px;
 
   .right {
     display: inline-block;
