--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -372,6 +372,7 @@ $color_vars: $yellow-primary, $yellow-secondary, $yellow-tertiary, $purple-prima
   position: relative;
   z-index: 10;
   padding: 50px 50px 50px 50px;
+  overflow: hidden;
 
   @include mq($mobile-landscape-width, 'max-width') {
      padding: 20px;
